--- a/crmapp/frontend/src/app/components/employee/employees/employees.component.html
+++ b/crmapp/frontend/src/app/components/employee/employees/employees.component.html
@@ -8,58 +8,65 @@
         <div class="row">
             <div class="col-md-10">
 
-                <table class="table table-sm"
-                    *ngIf="employees?.length > 0; else noEmployees">
-                
-                    <thead class="thead-default">
-                        <tr>
-                            <th class="text-center">ФИО</th>
-                            <th class="text-center">ИНН</th>
-                            <th class="text-center"></th>
-                        </tr>
-                    </thead>
-                
-                    <tr *ngFor="let employee of employees">
-                        <td class="text-center">
-                            {{employee?.surname}} {{employee?.firstname}} {{employee?.lastname}}
-                        </td>
-                        <td class="text-center">
-                            {{employee?.inn}}
-                        </td>
-                        <td class="text-right">
-                            <div class="btn-group">
-                                <a class="btn btn-info btn-sm"
-                                    [routerLink]="['/employees', employee?.id]">
-                                    <i class="fa fa-arrow-circle-o-right"></i> Подробнее
-                                </a>
-                                <button type="button" class="btn btn-info btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="sr-only"></span>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" 
-                                        [routerLink]="['/employees', employee?.id, 'addresses']">Адресы
-                                    </a>
-                                    <a class="dropdown-item" 
-                                        [routerLink]="['/employees', employee?.id, 'accounts']">Банковские реквизиты
-                                    </a>
-                                    <a class="dropdown-item" 
-                                        [routerLink]="['/employees', employee?.id, 'vacations-sicks']">Отпуски / Больничные листы
-                                    </a>
-                                    <a class="dropdown-item" 
-                                        [routerLink]="['/employees', employee?.id, 'agreements']">Договоры
-                                    </a>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
+                <div class="card">
+                    <div class="card-body"> 
+
+                        <table class="table table-sm"
+                            *ngIf="employees?.length > 0; else noEmployees">
                         
-                </table>
+                            <thead class="thead-default">
+                                <tr>
+                                    <th class="text-center">ФИО</th>
+                                    <th class="text-center">ИНН</th>
+                                    <th class="text-center"></th>
+                                </tr>
+                            </thead>
+                        
+                            <tr *ngFor="let employee of employees">
+                                <td class="text-center">
+                                    {{employee?.surname}} {{employee?.firstname}} {{employee?.lastname}}
+                                </td>
+                                <td class="text-center">
+                                    {{employee?.inn}}
+                                </td>
+                                <td class="text-right">
+                                    <div class="btn-group">
+                                        <a class="btn btn-info btn-sm"
+                                            [routerLink]="['/employees', employee?.id]">
+                                            <i class="fa fa-arrow-circle-o-right"></i> Подробнее
+                                        </a>
+                                        <button type="button" class="btn btn-info btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span class="sr-only"></span>
+                                        </button>
+                                        <div class="dropdown-menu dropdown-menu-right">
+                                            <a class="dropdown-item" 
+                                                [routerLink]="['/employees', employee?.id, 'addresses']">Адресы
+                                            </a>
+                                            <a class="dropdown-item" 
+                                                [routerLink]="['/employees', employee?.id, 'accounts']">Банковские реквизиты
+                                            </a>
+                                            <a class="dropdown-item" 
+                                                [routerLink]="['/employees', employee?.id, 'vacations-sicks']">Отпуски / Больничные листы
+                                            </a>
+                                            <a class="dropdown-item" 
+                                                [routerLink]="['/employees', employee?.id, 'agreements']">Договоры
+                                            </a>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                                
+                        </table>
+
+                    </div>
+                </div>
             
                 <ng-template #noEmployees>
-                <hr>
-                <h5 class="text-center">
-                    Отсутствуют сотрудники в системе...
-                </h5>
+                    <div class="alert alert-light" role="alert">
+                        <h6 class="lead text-center">
+                            <b>Отсутствуют сотрудники в системе...</b>
+                        </h6>
+                    </div>
                 </ng-template>
 
             </div>
