UI: state of development on 12.07.2017

--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
@@ -48,13 +48,9 @@
     </div>
 
     <ng-template #noAccounts>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-              <p class="lead text-center">Нет ни одного счета в системе ...</p>
-            </div>
-          </div>
-        <!-- <hr class="my-4">
-        <h5 class="text-center">Нет ни одного счета в системе ...</h5> -->
+        <div class="alert alert-light" role="alert">
+          <h6 class="lead text-center"><b>Нет ни одного счета в системе ...</b></h6>
+        </div>
     </ng-template>
 
   </div>
