--- a/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
@@ -40,8 +40,11 @@
     </table>
 
     <ng-template #noAgreements>
-        <hr>
-        <h5 class="text-center">Нет ни одного договора в системе ...</h5>
+        <div class="alert alert-light" role="alert">
+          <h6 class="lead text-center">
+            <b>Нет ни одного договора в системе ...</b>
+          </h6>
+        </div>
     </ng-template>
 
 
