--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
@@ -41,8 +41,11 @@
       </table>
 
       <ng-template #noDirectors>
-          <hr>
-          <h5 class="text-center">Нет ни одного директора в системе ...</h5>
+        <div class="alert alert-light" role="alert">
+          <h6 class="lead text-center">
+            <b>Нет ни одного руководителя в системе ...</b>
+          </h6>
+        </div>
       </ng-template>
   
 
