--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/edit-address/edit-address.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/edit-address/edit-address.component.html
@@ -33,7 +33,7 @@
               class="col-md-3 col-form-label">
               <strong>Действует с</strong>
             </label>
-            <div class="col-md">
+            <div class="col-md-3">
               <input 
                 type="text" 
                 class="form-control"
