UI: added edit, add, delete client's bank account
+ new routes, refactored code

--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/client-details-addresses-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/client-details-addresses-tab.component.html
@@ -25,8 +25,8 @@
             <td class="text-center">{{address.dateStart | date: 'dd.MM.y'}}</td>
             <td>
               <div class="d-flex justify-content-end">
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group mr-2" role="group" aria-label="First group">
+                <div class="btn-toolbar">
+                  <div class="btn-group mr-2">
                     <a class="btn btn-success btn-sm" 
                       [routerLink]="[address?.id, 'edit']">
                       <i class="fa fa-edit"></i> Изменить
