--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
@@ -24,18 +24,13 @@
             <td class="text-center" >{{account.dateStart | date: 'dd.MM.y'}}</td>
             <td>
               <div class="d-flex justify-content-end">
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-success btn-sm" >
-                      <i class="fa fa-edit"></i> Изменить
-                    </button>
-                  </div>
-                  <div class="btn-group mr-2" role="group" aria-label="Second group">
-                    <form action="#" method="post">
-                      <button type="submit" class="btn btn-danger btn-sm">
-                        <i class="fa fa-trash-o"></i> Удалить
-                      </button>
-                    </form>
+                <div class="btn-toolbar">
+                  <div class="btn-group mr-2" >
+                    <a class="btn btn-success btn-sm" 
+                      [routerLink]="[account?.id, 'edit']">
+                      <i class="fa fa-edit">
+                        </i> Изменить
+                    </a>
                   </div>
                 </div>
               </div>
@@ -49,16 +44,21 @@
 
     <ng-template #noAccounts>
         <div class="alert alert-light" role="alert">
-          <h6 class="lead text-center"><b>Нет ни одного счета в системе ...</b></h6>
+          <h6 class="lead text-center">
+            <b>Нет ни одного счета в системе ...</b>
+          </h6>
         </div>
     </ng-template>
 
   </div>
 
   <div class="col-md-2">
-    <button type="button" class="btn btn-primary btn-block">
-      <i class="fa fa-plus"></i> Новый счет
-    </button>
+    <a 
+      class="btn btn-primary btn-block"
+      [routerLink]="['add']">
+      <i class="fa fa-plus">
+        </i> Новый счет
+    </a>
   </div>
 
 </div>
