--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/edit-account/edit-account.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/edit-account/edit-account.component.html
@@ -13,15 +13,15 @@
             <label 
               for="presentation"
               class="col-md-3 col-form-label">
-              <strong>Адрес</strong>
+              <strong>Банк. счет</strong>
             </label> 
             <div class="col-md">
               <input 
                 type="text" 
                 class="form-control"
-                [(ngModel)]="address.presentation" 
+                [(ngModel)]="account.presentation" 
                 name="presentation" 
-                #addressPresentation="ngModel" 
+                #accountPresentation="ngModel" 
                 minlength="2" 
                 required>
             </div>
@@ -37,9 +37,9 @@
               <input 
                 type="text" 
                 class="form-control"
-                [(ngModel)]="address.dateStart" 
+                [(ngModel)]="account.dateStart" 
                 name="dateStart"
-                #addressDateStart="ngModel" 
+                #accountDateStart="ngModel" 
                 minlength="2" 
                 required>
             </div>
@@ -71,3 +71,4 @@
 </form>
     
     
+
