UI: the problem with updating address was resolved

--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/edit-address/edit-address.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/edit-address/edit-address.component.html
@@ -59,7 +59,7 @@
       <button 
         type="submit" 
         class="btn btn-success btn-block">
-        <i class="fa fa-check-square-o"></i> Записать
+        <i class="fa fa-check-square-o"></i> Сохранить
       </button>
       <button type="button" class="btn btn-danger btn-block" (click)="delete()">
         <i class="fa fa-trash-o"></i> Удалить
