--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
@@ -53,12 +53,7 @@
   </div>
 
   <div class="col-md-2">
-    <a 
-      class="btn btn-primary btn-block"
-      [routerLink]="['add']">
-      <i class="fa fa-plus">
-        </i> Новый счет
-    </a>
+    <app-sidebar [url] = "['add']" title = "Новый счет"></app-sidebar>
   </div>
 
 </div>
