--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/client-details-addresses-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/client-details-addresses-tab.component.html
@@ -51,12 +51,7 @@
     
   </div>
   <div class="col-md-2">
-    <a 
-      class="btn btn-primary btn-block"
-      [routerLink]="['add']">
-      <i class="fa fa-plus">
-        </i> Новый адрес
-    </a>
+    <app-sidebar [url] = "['add']" title = "Новый адрес"></app-sidebar>
   </div>
 </div>
 
