--- a/crmapp/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/crmapp/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
-<a routerLink="{{url}}" href="#" class="btn btn-primary btn-block">
+<a routerLink="{{url}}" class="btn btn-primary btn-block">
     <i class="fa fa-plus-circle"></i> {{title}}
 </a>
