--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
@@ -28,18 +28,12 @@
             <td class="text-center" >{{director.dateStart | date: 'dd.MM.y'}}</td>
             <td>
               <div class="d-flex justify-content-end">
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-success btn-sm" >
+                <div class="btn-toolbar">
+                  <div class="btn-group mr-2">
+                    <a class="btn btn-success btn-sm" 
+                      [routerLink]="[director?.id, 'edit']">
                       <i class="fa fa-edit"></i> Изменить
-                    </button>
-                  </div>
-                  <div class="btn-group mr-2" role="group" aria-label="Second group">
-                    <form action="#" method="post">
-                      <button type="submit" class="btn btn-danger btn-sm">
-                        <i class="fa fa-trash-o"></i> Удалить
-                      </button>
-                    </form>
+                    </a>
                   </div>
                 </div>
               </div>
