--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/add-director/add-director.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/add-director/add-director.component.html
@@ -54,15 +54,9 @@
               <strong>Должность</strong>
             </label> 
             <div class="col-md-5">
-              <input 
-                type="text" 
-                class="form-control"
-                placeholder="напр., Генеральный директор"
-                [(ngModel)]="post.title" 
-                name="title" 
-                #postTitle="ngModel" 
-                minlength="2" 
-                required>
+              <select class="form-control" [(ngModel)]="director.post" name="post">
+                <option *ngFor="let post of posts" [ngValue]="post">{{post.title}}</option>
+              </select>
             </div>
           </div>
 
@@ -70,7 +64,7 @@
             <label 
               for="dateStart"
               class="col-md-3 col-form-label">
-              <strong>Действует с</strong>
+              <strong>Актуален с</strong>
             </label>
             <div class="col-md-3">
               <input 
