--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/edit-director/edit-director.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/edit-director/edit-director.component.html
@@ -1,3 +1,104 @@
 <p>
-  edit-director works!
-</p>
+  
+<form (ngSubmit)="onSubmit()">
+
+  <div class="row">
+
+    <div class="col-md-10">
+
+      <div class="card">
+        <div class="card-body"> 
+
+          <div class="form-group row">
+            <label 
+              for="fullName"
+              class="col-md-3 col-form-label">
+              <strong>Фамилия Имя Отчество</strong>
+            </label> 
+            <div class="col-md">
+              <input 
+                type="text" 
+                class="form-control"
+                placeholder="напр., Иванов Иван Иванович"
+                [(ngModel)]="director.fullName" 
+                name="fullName" 
+                #directorFullName="ngModel" 
+                minlength="2" 
+                required>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label 
+              for="shortName"
+              class="col-md-3 col-form-label">
+              <strong>Фамилия и Инициалы</strong>
+            </label> 
+            <div class="col-md">
+              <input 
+                type="text" 
+                class="form-control"
+                placeholder="напр., Иванов И.И."
+                [(ngModel)]="director.shortName" 
+                name="shortName" 
+                #directorShortName="ngModel" 
+                minlength="2" 
+                required>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label 
+              for="post"
+              class="col-md-3 col-form-label">
+              <strong>Должность</strong>
+            </label> 
+            <div class="col-md-5">
+              <select class="form-control" [(ngModel)]="director.post" name="post">
+                <option *ngFor="let post of posts" [ngValue]="post">{{post.title}}</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label 
+              for="dateStart"
+              class="col-md-3 col-form-label">
+              <strong>Актуален с</strong>
+            </label>
+            <div class="col-md-3">
+              <input 
+                type="text" 
+                class="form-control"
+                [(ngModel)]="director.dateStart" 
+                name="dateStart"
+                #directorDateStart="ngModel" 
+                minlength="2" 
+                required>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="col-md-2">
+      <a class="btn btn-info btn-block"
+        [routerLink]="['../']">
+        <i class="fa fa-arrow-circle-o-left">
+          </i> Вернуться
+      </a>
+      <button 
+        type="submit" 
+        class="btn btn-success btn-block">
+        <i class="fa fa-check-square-o"></i> Сохранить
+      </button>
+      <button type="button" class="btn btn-danger btn-block" (click)="delete()">
+        <i class="fa fa-trash-o"></i> Удалить
+      </button>
+    </div>
+
+  </div>
+
+</form>
